# sqlaudit

./: README.md  license  pyproject.toml
.github/workflows/: publish.yml
examples/: basic.py
sqlaudit/: __init__.py  config.py  context.py  decorators.py  exceptions.py  hooks.py  logger.py  models.py  options.py  pre_flight.py  process.py  registry.py  retrieval.py  serializer.py  types.py  utils.py
sqlaudit/_internals/: buffer.py  models.py  registry.py  types.py  utils.py
tests/: test_config.py  test_decorators.py  test_full.py  test_full_polymorphic.py  test_hooks.py  test_process.py  test_registry.py  test_retrieval.py  test_serializer.py  test_utils.py
tests/utils/: db.py
