[project]
name = "sqlaudit"
version = "0.4.0"
description = "SQLAlchemy extension that provides an easy way to track changes to your database models." 
authors = [
    {name = "Sander J. Bouwman"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "tzlocal (>=5.3.1,<6.0.0)",
]

[project.urls]
Repository = "https://github.com/SanderJBouwman/sqlaudit"
Issues = "https://github.com/SanderJBouwman/sqlaudit/issues"
Changelog = "https://github.com/SanderJBouwman/sqlaudit/releases"

[tool.poetry]
packages = [{ include = "sqlaudit" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
